Update the project

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <input type="date" name="endDate">
-        <div class="click">
+        <div class="clock">
             <span><span class="days">0</span>Days</span>
             <span><span class="hours">0</span>Hours</span>
             <span><span class="minutes">0</span>Minutes</span>
