--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <div>
+    <div class="container">
+        <h1 class="title">Select Your Birth Date</h1>
         <input type="date" name="endDate">
         <div class="clock">
             <span><span class="days">0</span>Days</span>
