--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="scss/main.scss">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/query.css">
     <title>Timer</title>
 </head>
 
