--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="scss/main.scss">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/query.css">
-    <title>Timer</title>
+    <title>Birthday Countdown</title>
 </head>
 
 <body>
